--- a/MyEvents/Scenes/Authentification/LoginViewController.xib
+++ b/MyEvents/Scenes/Authentification/LoginViewController.xib
@@ -10,7 +10,10 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LoginViewController" customModule="MyEvents" customModuleProvider="target">
             <connections>
+                <outlet property="ErrorLabel" destination="rng-al-ya0" id="Oqv-Jz-XIq"/>
                 <outlet property="SignUpButton" destination="CGr-sD-52u" id="iXn-yc-o0V"/>
+                <outlet property="emailTextField" destination="e5n-4s-U3d" id="ScS-ph-Msj"/>
+                <outlet property="passwordTextField" destination="u5G-9q-FYp" id="enb-7j-hzd"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -22,12 +25,12 @@
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="yourmail@example.com" textAlignment="center" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="e5n-4s-U3d">
                     <rect key="frame" x="90" y="254" width="234" height="34"/>
                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                    <textInputTraits key="textInputTraits"/>
+                    <textInputTraits key="textInputTraits" textContentType="email"/>
                 </textField>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="center" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="u5G-9q-FYp">
                     <rect key="frame" x="90" y="323" width="234" height="34"/>
                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                    <textInputTraits key="textInputTraits"/>
+                    <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                 </textField>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="IcV-uV-BkA" userLabel="Separator Label">
                     <rect key="frame" x="67" y="198" width="89" height="21"/>
@@ -43,6 +46,9 @@
                     <state key="normal" title="Login">
                         <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
+                    <connections>
+                        <action selector="touchLogin:" destination="-1" eventType="touchUpInside" id="QMd-sw-3up"/>
+                    </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Or" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="C9e-tr-klg" userLabel="Login Title Label">
                     <rect key="frame" x="176" y="463" width="62" height="21"/>
@@ -62,6 +68,13 @@
                         <action selector="touchSignUp:" destination="-1" eventType="touchUpInside" id="oWy-rn-HKa"/>
                     </connections>
                 </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rng-al-ya0">
+                    <rect key="frame" x="120" y="629" width="158" height="21"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" red="0.30599874378313924" green="0.5" blue="0.92262998915262506" alpha="0.74919734589041098" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
