--- a/MyEvents/Scenes/Authentification/SignUpViewController.xib
+++ b/MyEvents/Scenes/Authentification/SignUpViewController.xib
@@ -12,9 +12,11 @@
             <connections>
                 <outlet property="ErrorLabel" destination="sBs-uh-PNu" id="tUI-kZ-l7b"/>
                 <outlet property="LoginButton" destination="1wa-FF-OhK" id="hsD-E8-Fm0"/>
+                <outlet property="OrgRole" destination="Aam-pn-ZHz" id="tcP-dh-g7f"/>
                 <outlet property="SignUpButton" destination="Sjy-bj-Ir6" id="Ytg-Dk-rFT"/>
                 <outlet property="emailTextField" destination="di1-JN-cDI" id="G3C-Dk-9Yx"/>
                 <outlet property="passwordTextField" destination="Gfj-CV-9jb" id="c1X-Hi-Cbh"/>
+                <outlet property="userRole" destination="qiu-oT-xWG" id="fqD-ig-Ana"/>
                 <outlet property="usernameTextField" destination="dGi-8D-Lr0" id="wZK-2H-x2o"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -25,7 +27,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign Up" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uXY-Ke-6r2">
-                    <rect key="frame" x="190" y="244" width="61" height="21"/>
+                    <rect key="frame" x="190" y="173" width="61" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
@@ -99,13 +101,23 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qiu-oT-xWG" customClass="RadioButton" customModule="MyEvents" customModuleProvider="target">
+                    <rect key="frame" x="126" y="224" width="70" height="30"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <state key="normal" title="Utilisateur"/>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Aam-pn-ZHz" customClass="RadioButton" customModule="MyEvents" customModuleProvider="target">
+                    <rect key="frame" x="213" y="224" width="86" height="30"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <state key="normal" title="organisateur"/>
+                </button>
             </subviews>
             <color key="backgroundColor" red="0.56525886058807373" green="0.21658456513398006" blue="0.20711566386615246" alpha="0.85348886986301364" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="MQs-ox-QYu" firstAttribute="top" secondItem="dGi-8D-Lr0" secondAttribute="bottom" constant="8" id="4U9-gV-8xF"/>
                 <constraint firstItem="5CN-fY-am1" firstAttribute="leading" secondItem="MQs-ox-QYu" secondAttribute="leading" id="58r-Kr-szi"/>
                 <constraint firstItem="Gfj-CV-9jb" firstAttribute="top" secondItem="MQs-ox-QYu" secondAttribute="bottom" constant="8" id="FUQ-Z9-ddc"/>
-                <constraint firstItem="uXY-Ke-6r2" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="200" id="MTm-qM-dNl"/>
+                <constraint firstItem="uXY-Ke-6r2" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="129" id="MTm-qM-dNl"/>
                 <constraint firstItem="1wa-FF-OhK" firstAttribute="leading" secondItem="Sjy-bj-Ir6" secondAttribute="leading" id="Oct-wT-ERB"/>
                 <constraint firstItem="Gfj-CV-9jb" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="100" id="OrE-5M-sR7"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="di1-JN-cDI" secondAttribute="trailing" constant="100" id="T3P-bf-UOJ"/>
