--- a/MyEvents/Scenes/Events/HomeEventsViewController.xib
+++ b/MyEvents/Scenes/Events/HomeEventsViewController.xib
@@ -22,6 +22,9 @@
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Avo-uM-RHy">
                     <rect key="frame" x="330" y="53" width="57" height="35"/>
                     <state key="normal" title="Account"/>
+                    <connections>
+                        <action selector="touchToAccount:" destination="-1" eventType="touchUpInside" id="rY4-W3-wia"/>
+                    </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3am-qj-t4r">
                     <rect key="frame" x="20" y="53" width="57" height="35"/>
